# CirOpt

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  evaluate_hpc.pbs  gen_param.sh  local_run.sh  references.md
.github/: pull_request_template.md
doxygen/html/: _c_circuit_8h_source.html  _c_simulator_8h_source.html  _c_unit_8h_source.html  _genetic___algorithm_8h_source.html  _parameters_8h_source.html  annotated.html  class_c_unit-members.html  class_c_unit.html  class_circuit-members.html  class_circuit.html  class_unit-members.html  class_unit.html  classes.html  classpostprocessing_1_1_post_processor-members.html  classpostprocessing_1_1_post_processor.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ed2ef56b14443691620563357dcd08b5.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  pages.html  struct_algorithm___parameters-members.html  struct_algorithm___parameters.html  struct_circuit_f-members.html  struct_circuit_f.html
doxygen/latex/: _c_circuit_8h_source.tex  annotated.tex  (+13 more)
include/: CCircuit.h  CSimulator.h  CUnit.h  Genetic_Algorithm.h  Parameters.h
plots/: cross.txt  murate.txt  nunits5_30.txt  nunits_plt.txt  popmult.txt
post_processing/: inputdata.txt  postprocessing.py
src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  CUnit.cpp  Genetic_Algorithm.cpp  main.cpp
tests/: CMakeLists.txt  test_circuit_simulator.cpp  test_genetic_algorithm.cpp  test_validity_checker.cpp
(+18 files in other folders)
